--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -16,14 +16,21 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(1000, 75)\n"
+     ]
+    }
+   ],
    "source": [
-    "# This function flattens the images\n",
-    "def flatten_image (X, length):\n",
-    "    X_flatten = np.empty([length,16*15])\n",
-    "    for i in range (length):\n",
-    "        X_flatten[i] = X[i].flatten()\n",
-    "    return X_flatten"
+    "# Load and prepare training set\n",
+    "dataset = Loader()\n",
+    "dataset.pca()\n",
+    "X, y = dataset.getWholeTrainSet(pca=True)\n",
+    "print(np.shape(X))"
    ]
   },
   {
@@ -40,12 +47,9 @@
     }
    ],
    "source": [
-    "# Load and prepare training set\n",
-    "dataset = Loader()\n",
-    "dataset.pca()\n",
-    "X_flatten, y = dataset.getWholeTrainSet(pca=True)\n",
-    "# X_flatten = flatten_image(np.array(X), len(y))\n",
-    "print (np.shape(X_flatten))"
+    "# Load and prepare test set\n",
+    "X_test, y_test = dataset.getWholeTestSet(pca=True)\n",
+    "print(np.shape(X_test))"
    ]
   },
   {
@@ -54,64 +58,31 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "MLPClassifier()"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
-   "source": [
-    "# Apply MLP\n",
-    "model = neural_network.MLPClassifier()\n",
-    "model.fit(X_flatten, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(1000, 75)\n"
+      "Number of runs: 10\nPrecision array [96.7 96.3 97.3 97.  97.2 97.  96.6 97.1 96.8 97. ]\nMean test precision: 96.9\nVariance test precision 0.08200000000000034\n"
      ]
     }
    ],
    "source": [
-    "# Load and prepare test set\n",
-    "X_test_flatten, y_test = dataset.getWholeTestSet(pca=True)\n",
-    "# X_test_flatten = flatten_image(X_test, len(y_test))\n",
-    "print (np.shape(X_test_flatten))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Test error: 0.034\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Compute test error\n",
-    "mismatch = 0\n",
-    "y_predict = model.predict(X_test_flatten)\n",
-    "for i in range(len(y_test)):\n",
-    "    if y_test[i] != y_predict[i]:\n",
-    "        mismatch+=1\n",
-    "   \n",
-    "print (\"Test error:\",  mismatch/len(y_test))\n"
+    "runs = 10\n",
+    "precision = np.empty(runs)\n",
+    "for run in range(runs):\n",
+    "    # Apply MLP\n",
+    "    model = neural_network.MLPClassifier(hidden_layer_sizes=(250)) \n",
+    "    model.fit(X, y)\n",
+    "\n",
+    "    # Compute precision\n",
+    "    precision[run] = model.score(X_test, y_test) * 100\n",
+    "\n",
+    "mean_precision = np.mean(precision)\n",
+    "var_precision = np.var(precision)\n",
+    "\n",
+    "print(\"Number of runs:\", runs)  \n",
+    "print(\"Precision array\", precision)\n",
+    "print(\"Mean test precision:\",  mean_precision)\n",
+    "print(\"Variance test precision\", var_precision)"
    ]
   },
   {
