--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -9,6 +9,8 @@
     "# load libraries\n",
     "from loader import Loader\n",
     "from sklearn import neural_network\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "import numpy as np"
    ]
   },
@@ -21,16 +23,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(1000, 75)\n"
+      "1000\n1000\n2000\n"
      ]
     }
    ],
    "source": [
-    "# Load and prepare training set\n",
+    "# Load and prepare data set\n",
     "dataset = Loader()\n",
     "dataset.pca()\n",
-    "X, y = dataset.getWholeTrainSet(pca=True)\n",
-    "print(np.shape(X))"
+    "X1, y1 = dataset.getWholeTrainSet(pca=True)\n",
+    "X2, y2 = dataset.getWholeTestSet(pca=True)\n",
+    "X = np.concatenate((X1, X2), axis=0)\n",
+    "y = np.concatenate((y1, y2), axis=0)"
    ]
   },
   {
@@ -42,47 +46,14 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(1000, 75)\n"
+      "[0.9825 0.98   0.9725 0.9625 0.9725]\n"
      ]
     }
    ],
    "source": [
-    "# Load and prepare test set\n",
-    "X_test, y_test = dataset.getWholeTestSet(pca=True)\n",
-    "print(np.shape(X_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Number of runs: 10\nPrecision array [96.7 96.3 97.3 97.  97.2 97.  96.6 97.1 96.8 97. ]\nMean test precision: 96.9\nVariance test precision 0.08200000000000034\n"
-     ]
-    }
-   ],
-   "source": [
-    "runs = 10\n",
-    "precision = np.empty(runs)\n",
-    "for run in range(runs):\n",
-    "    # Apply MLP\n",
-    "    model = neural_network.MLPClassifier(hidden_layer_sizes=(250)) \n",
-    "    model.fit(X, y)\n",
-    "\n",
-    "    # Compute precision\n",
-    "    precision[run] = model.score(X_test, y_test) * 100\n",
-    "\n",
-    "mean_precision = np.mean(precision)\n",
-    "var_precision = np.var(precision)\n",
-    "\n",
-    "print(\"Number of runs:\", runs)  \n",
-    "print(\"Precision array\", precision)\n",
-    "print(\"Mean test precision:\",  mean_precision)\n",
-    "print(\"Variance test precision\", var_precision)"
+    "model = neural_network.MLPClassifier(hidden_layer_sizes=(250)) \n",
+    "scores = cross_val_score(model, X, y, cv=5)\n",
+    "print(scores)"
    ]
   },
   {
