--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -16,7 +16,8 @@
     "        X_flatten[i] = X[i].flatten()\n",
     "    return X_flatten\n",
     "\n",
-    "dataset = Loader()"
+    "dataset = Loader()\n",
+    "dataset.pca()"
    ]
   },
   {
@@ -28,14 +29,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1000, 240)\n"
+      "(1000, 16, 15)\n"
      ]
     }
    ],
    "source": [
-    "X, y = dataset.getWholeTrainSet()\n",
-    "X_flatten = flatten_image(np.array(X), len(y))\n",
-    "print (np.shape(X_flatten))"
+    "X, y = dataset.getWholeTrainSet(pca=False, shuffle=True)\n",
+    "print(np.shape(X))\n",
+    "X = flatten_image(np.array(X), len(y))"
    ]
   },
   {
@@ -56,7 +57,7 @@
    ],
    "source": [
     "clf = svm.SVC()\n",
-    "clf.fit(X_flatten,y)"
+    "clf.fit(X,y)"
    ]
   },
   {
@@ -65,8 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test, y_test = dataset.getWholeTestSet()\n",
-    "X_test_flatten = flatten_image(X_test, len(y_test))"
+    "X_test, y_test = dataset.getWholeTestSet(pca=False,shuffle=True)\n",
+    "X_test = flatten_image(X_test, len(y_test))"
    ]
   },
   {
@@ -78,19 +79,131 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.026\n"
+      "Test error: 0.026\n"
      ]
     }
    ],
    "source": [
     "mismatch = 0\n",
-    "y_predict = clf.predict(X_test_flatten)\n",
+    "y_predict = clf.predict(X_test)\n",
     "for i in range(len(y_test)):\n",
     "    if y_test[i] != y_predict[i]:\n",
     "        mismatch+=1\n",
     "\n",
     "        \n",
-    "print (\"Test error:\",  mismatch/len(y_test))\n"
+    "print (\"Test error:\",  mismatch/len(y_test))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test error: 0.03\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_test, y_test = dataset.getNoisySet(intensity = 0.5, flat = False)\n",
+    "X_test = flatten_image(X_test, len(y_test))\n",
+    "y_predict = clf.predict(X_test)\n",
+    "mismatch = 0\n",
+    "for i in range(len(y_test)):\n",
+    "    if y_test[i] != y_predict[i]:\n",
+    "        mismatch+=1\n",
+    "\n",
+    "print (\"Test error:\",  mismatch/len(y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC()"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = svm.SVC()\n",
+    "clf.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test, y_test = dataset.getWholeTestSet(pca=True,shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test error: 0.025\n"
+     ]
+    }
+   ],
+   "source": [
+    "mismatch = 0\n",
+    "y_predict = clf.predict(X_test)\n",
+    "for i in range(len(y_test)):\n",
+    "    if y_test[i] != y_predict[i]:\n",
+    "        mismatch+=1\n",
+    "print (\"Test error:\",  mismatch/len(y_test))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test error: 0.029\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_test, y_test = dataset.getNoisySet(intensity = 1, flat = False, pca=True)\n",
+    "y_predict = clf.predict(X_test)\n",
+    "mismatch = 0\n",
+    "for i in range(len(y_test)):\n",
+    "    if y_test[i] != y_predict[i]:\n",
+    "        mismatch+=1\n",
+    "\n",
+    "print (\"Test error:\",  mismatch/len(y_test))"
    ]
   },
   {
