--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from loader import Loader\n",
     "from sklearn import svm\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "import numpy as np\n",
     "\n",
     "def flatten_image (X, length):\n",
@@ -16,8 +17,51 @@
     "        X_flatten[i] = X[i].flatten()\n",
     "    return X_flatten\n",
     "\n",
+    "def add_noise (X, intensity):\n",
+    "    examples, imsize = np.shape(X)\n",
+    "    for i in range (examples):\n",
+    "        noise = np.random.rand(imsize)\n",
+    "        X[i] += intensity*noise\n",
+    "    return X\n",
+    "\n",
+    "def cross_val_with_noise (X,y,k,intensity,clf):\n",
+    "    \n",
+    "    scores = np.zeros(k)\n",
+    "    fold_len = int(len(X)/k)\n",
+    "    X_test = X[0:fold_len, :]\n",
+    "    y_test = y[0:fold_len]\n",
+    "    X_train = X[fold_len:, :]\n",
+    "    y_train = y[fold_len:]\n",
+    "    \n",
+    "    X_train = add_noise(X_train, intensity)\n",
+    "    \n",
+    "    for i in range(k):\n",
+    "        clf.fit(X_train,y_train)\n",
+    "        y_predict = clf.predict(X_test)\n",
+    "        mismatch = 0\n",
+    "        for j in range(len(y_test)):\n",
+    "            if y_test[j] != y_predict[j]:\n",
+    "                mismatch+=1\n",
+    "        scores[i] = (1-mismatch/len(y_test))*100\n",
+    "        X_test = X[i*fold_len:(i+1)*fold_len, :]\n",
+    "        y_test = y[i*fold_len:(i+1)*fold_len]\n",
+    "        X_train = np.append(X[0:i*fold_len, :], X[(i+1)*fold_len:, :], axis = 0)\n",
+    "        y_train = np.append(y[0:i*fold_len], y[(i+1)*fold_len:], axis = 0)\n",
+    "        \n",
+    "        X_train = add_noise(X_train, intensity)\n",
+    "        \n",
+    "    return scores;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset = Loader()\n",
-    "dataset.pca(n_comp=75)"
+    "del dataset\n",
+    "dataset = Loader()"
    ]
   },
   {
@@ -26,209 +70,56 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1000, 16, 15)\n"
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-5eb4e7c5826c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mnoise_opt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn_comp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreversed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m75\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m241\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpca\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_comp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mn_comp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetWholeTrainSet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpca\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
      ]
     }
    ],
    "source": [
-    "X, y = dataset.getWholeTrainSet(pca=False, shuffle=True)\n",
-    "print(np.shape(X))\n",
-    "X = flatten_image(np.array(X), len(y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC(kernel='poly')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf = svm.SVC(kernel = 'poly', degree = 3)\n",
-    "clf.fit(X,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test, y_test = dataset.getWholeTestSet(pca=False,shuffle=True)\n",
-    "X_test = flatten_image(X_test, len(y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy: 97.8 %\n"
-     ]
-    }
-   ],
-   "source": [
-    "mismatch = 0\n",
-    "y_predict = clf.predict(X_test)\n",
-    "for i in range(len(y_test)):\n",
-    "    if y_test[i] != y_predict[i]:\n",
-    "        mismatch+=1\n",
-    "\n",
+    "degree_opt = 1\n",
+    "acc_opt = 0\n",
+    "comp_opt = 0\n",
+    "noise_opt = 0.0\n",
+    "for n_comp in reversed(range(75,241)):\n",
+    "    dataset.pca(n_comp=n_comp)\n",
     "        \n",
-    "print (\"Test accuracy:\",  (1-mismatch/len(y_test))*100, \"%\")\n",
-    "\n"
+    "    X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)\n",
+    "    for degree in range (1,5):\n",
+    "        clf = svm.SVC(kernel = 'poly', degree = degree)            \n",
+    "        scores = cross_val_score(clf, X, y ,cv=5)\n",
+    "        #print(\"Validation accuracy for polynomial with degree, degree,\": \", scores.mean())\n",
+    "        if scores.mean() >= acc_opt:\n",
+    "            acc_opt = scores.mean()\n",
+    "            degree_opt = degree\n",
+    "            comp_opt = n_comp\n",
+    "            noise_opt = noise_int\n",
+    "    print (n_comp)\n",
+    "print (\"Optimal degree of\", degree_opt, \"with accuracy of\", acc_opt, \"and\", comp_opt, \"components\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy: 97.8 %\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_test, y_test = dataset.getNoisySet(intensity = 0.5, flat = False)\n",
-    "\n",
-    "X_test = flatten_image(X_test, len(y_test))\n",
-    "y_predict = clf.predict(X_test)\n",
-    "mismatch = 0\n",
-    "for i in range(len(y_test)):\n",
-    "    if y_test[i] != y_predict[i]:\n",
-    "        mismatch+=1\n",
-    "\n",
-    "print (\"Test accuracy:\",  (1-mismatch/len(y_test))*100, \"%\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC(kernel='linear')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf = svm.SVC()\n",
-    "clf.fit(X,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_test, y_test = dataset.getWholeTestSet(pca=True,shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy: 96.0 %\n"
-     ]
-    }
-   ],
-   "source": [
-    "mismatch = 0\n",
-    "y_predict = clf.predict(X_test)\n",
-    "\n",
-    "for i in range(len(y_test)):\n",
-    "    if y_test[i] != y_predict[i]:\n",
-    "        mismatch+=1\n",
-    "print (\"Test accuracy:\",  (1-mismatch/len(y_test))*100, \"%\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy: 96.2 %\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_test, y_test = dataset.getNoisySet(intensity = 0.4, flat = False, pca=True, shuffle=True)\n",
+    "dataset.pca(n_comp=comp_opt)\n",
+    "X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)\n",
+    "clf = svm.SVC(kernel = 'poly', degree = degree_opt)\n",
+    "clf.fit(X,y)\n",
+    "X_test, y_test = dataset.getWholeTestSet(pca=True,shuffle=True,flat=False)\n",
     "y_predict = clf.predict(X_test)\n",
     "mismatch = 0\n",
     "for i in range(len(y_test)):\n",
     "    if y_test[i] != y_predict[i]:\n",
     "        mismatch+=1\n",
-    "\n",
-    "\n",
     "print (\"Test accuracy:\",  (1-mismatch/len(y_test))*100, \"%\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC()"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X, y = dataset.getNoisySet(intensity=0.4,pca=True,shuffle=True,set=\"train\")\n",
-    "clf = svm.SVC()\n",
-    "clf.fit(X,y)"
    ]
   },
   {
@@ -240,119 +131,140 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 97.3 %\n"
+      "149\n",
+      "148\n",
+      "147\n",
+      "146\n",
+      "145\n",
+      "144\n",
+      "143\n",
+      "142\n",
+      "141\n",
+      "140\n",
+      "139\n",
+      "138\n",
+      "137\n",
+      "136\n",
+      "135\n",
+      "134\n",
+      "133\n",
+      "132\n",
+      "131\n",
+      "130\n",
+      "129\n",
+      "128\n",
+      "127\n",
+      "126\n",
+      "125\n",
+      "124\n",
+      "123\n",
+      "122\n",
+      "121\n",
+      "120\n",
+      "119\n",
+      "118\n",
+      "117\n",
+      "116\n",
+      "115\n",
+      "114\n",
+      "113\n",
+      "112\n",
+      "111\n",
+      "110\n",
+      "109\n",
+      "108\n",
+      "107\n",
+      "106\n",
+      "105\n",
+      "104\n",
+      "103\n",
+      "102\n",
+      "101\n",
+      "100\n",
+      "99\n",
+      "98\n",
+      "97\n",
+      "96\n",
+      "95\n",
+      "94\n",
+      "93\n",
+      "92\n",
+      "91\n",
+      "90\n",
+      "89\n",
+      "88\n",
+      "87\n",
+      "86\n",
+      "85\n",
+      "84\n",
+      "83\n",
+      "82\n",
+      "81\n",
+      "80\n",
+      "79\n",
+      "78\n",
+      "77\n",
+      "76\n",
+      "75\n",
+      "74\n",
+      "73\n",
+      "72\n",
+      "71\n",
+      "70\n",
+      "Accuracy of 98.2 and 83 components and C: 2 noise intensity: 0.1\n"
      ]
     }
    ],
    "source": [
-    "X_test, y_test = dataset.getWholeTestSet(shuffle=True,pca=True)\n",
-    "y_predict = clf.predict(X_test)\n",
-    "mismatch = 0\n",
-    "for i in range(len(y_test)):\n",
-    "    if y_test[i] != y_predict[i]:\n",
-    "        mismatch+=1\n",
-    "\n",
-    "\n",
-    "print (\"Test accuracy:\",  (1-mismatch/len(y_test))*100, \"%\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy: 97.2 %\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_test, y_test = dataset.getNoisySet(intensity=0.4,shuffle=True,pca=True)\n",
-    "y_predict = clf.predict(X_test)\n",
-    "mismatch = 0\n",
-    "for i in range(len(y_test)):\n",
-    "    if y_test[i] != y_predict[i]:\n",
-    "        mismatch+=1\n",
-    "\n",
-    "\n",
-    "print (\"Test accuracy:\",  (1-mismatch/len(y_test))*100, \"%\")"
+    "c_opt = 1\n",
+    "acc_opt = 0\n",
+    "comp_opt = 0\n",
+    "noise_opt = 0.0\n",
+    "for n_comp in reversed(range(70,150)):\n",
+    "    dataset.pca(n_comp=n_comp)\n",
+    "        \n",
+    "    X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)\n",
+    "    for C in [0.5,1,2,3,4]:\n",
+    "        for noise_int in [0.1,0.2,0.3,0.4,0.5]:\n",
+    "            clf = svm.SVC(C=C)\n",
+    "            scores = cross_val_with_noise(X,y,10,noise_int,clf)\n",
+    "            if np.mean(scores) >= acc_opt:\n",
+    "                acc_opt = np.mean(scores)\n",
+    "                comp_opt = n_comp\n",
+    "                noise_opt = noise_int\n",
+    "                c_opt = C\n",
+    "    \n",
+    "print (\"Accuracy of\", acc_opt, \"and\", comp_opt, \"components and C:\", c_opt, \"noise intensity:\", noise_opt)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.addAugmentedData()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X,y = dataset.getWholeTrainSet(shuffle=True)\n",
-    "X = flatten_image(X, len(y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC(kernel='poly')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf = svm.SVC(kernel='poly')\n",
-    "clf.fit(X,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 97.39999999999999 %\n"
+      "Test accuracy: 97.89999999999999 %\n"
      ]
     }
    ],
    "source": [
-    "X_test, y_test = dataset.getWholeTestSet(shuffle=True)\n",
-    "X_test = flatten_image(X_test, len(y))\n",
+    "dataset.pca(n_comp=comp_opt)\n",
+    "#X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)\n",
+    "X, y = dataset.getNoisySet(intensity = noise_opt, flat = False, pca=True, shuffle=True, set=\"train\")\n",
+    "clf = svm.SVC(C=c_opt)\n",
+    "clf.fit(X,y)\n",
+    "X_test, y_test = dataset.getWholeTestSet(pca=True,shuffle=True,flat=False)\n",
     "y_predict = clf.predict(X_test)\n",
     "mismatch = 0\n",
     "for i in range(len(y_test)):\n",
     "    if y_test[i] != y_predict[i]:\n",
     "        mismatch+=1\n",
-    "\n",
-    "\n",
     "print (\"Test accuracy:\",  (1-mismatch/len(y_test))*100, \"%\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
