Changed noise to gaussian

--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "def add_noise (X, intensity):\n",
     "    examples, imsize = np.shape(X)\n",
     "    for i in range (examples):\n",
-    "        noise = np.random.rand(imsize)\n",
+    "        noise = np.random.normal(0,0.1**0.5, imsize)\n",
     "        X[i] += intensity*noise\n",
     "    return X\n",
     "\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,26 +81,40 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.9783999999999995 %\n"
+     ]
+    }
+   ],
    "source": [
-    "degree_opt = 1\n",
-    "acc_opt = 0\n",
-    "comp_opt = 0\n",
-    "noise_opt = 0.0\n",
-    "for n_comp in reversed(range(75,241)):\n",
-    "    dataset.pca(n_comp=n_comp)\n",
-    "        \n",
-    "    X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)\n",
-    "    for degree in range (1,5):\n",
-    "        clf = svm.SVC(kernel = 'poly', degree = degree)            \n",
-    "        scores = cross_val_score(clf, X, y ,cv=5)\n",
-    "        #print(\"Validation accuracy for polynomial with degree, degree,\": \", scores.mean())\n",
-    "        if scores.mean() >= acc_opt:\n",
-    "            acc_opt = scores.mean()\n",
-    "            degree_opt = degree\n",
-    "            comp_opt = n_comp\n",
-    "            noise_opt = noise_int\n",
-    "    print (n_comp)\n",
-    "print (\"Optimal degree of\", degree_opt, \"with accuracy of\", acc_opt, \"and\", comp_opt, \"components\")\n"
+    "noise_opt = 0.5\n",
+    "c_opt = 3.5\n",
+    "dataset.pca(n_comp=75)\n",
+    "#X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)\\\n",
+    "accuracy = 0\n",
+    "for n in range(100):\n",
+    "    \n",
+    "    X, y = dataset.getNoisySet(intensity = noise_opt, flat = False, pca=True, shuffle=True, set=\"train\")\n",
+    "    clf = svm.SVC(C=c_opt)\n",
+    "    clf.fit(X,y)\n",
+    "    X_test, y_test = dataset.getWholeTestSet(pca=True,shuffle=True,flat=False)\n",
+    "    y_predict = clf.predict(X_test)\n",
+    "    mismatch = 0\n",
+    "    for i in range(len(y_test)):\n",
+    "        if y_test[i] != y_predict[i]:\n",
+    "            mismatch+=1\n",
+    "    accuracy += (1-mismatch/len(y_test))/100\n",
+    "print (\"Test accuracy:\", accuracy , \"%\")"
    ]
   },
   {
@@ -109,162 +123,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.pca(n_comp=comp_opt)\n",
-    "X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)\n",
-    "clf = svm.SVC(kernel = 'poly', degree = degree_opt)\n",
-    "clf.fit(X,y)\n",
-    "X_test, y_test = dataset.getWholeTestSet(pca=True,shuffle=True,flat=False)\n",
-    "y_predict = clf.predict(X_test)\n",
-    "mismatch = 0\n",
-    "for i in range(len(y_test)):\n",
-    "    if y_test[i] != y_predict[i]:\n",
-    "        mismatch+=1\n",
-    "print (\"Test accuracy:\",  (1-mismatch/len(y_test))*100, \"%\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "149\n",
-      "148\n",
-      "147\n",
-      "146\n",
-      "145\n",
-      "144\n",
-      "143\n",
-      "142\n",
-      "141\n",
-      "140\n",
-      "139\n",
-      "138\n",
-      "137\n",
-      "136\n",
-      "135\n",
-      "134\n",
-      "133\n",
-      "132\n",
-      "131\n",
-      "130\n",
-      "129\n",
-      "128\n",
-      "127\n",
-      "126\n",
-      "125\n",
-      "124\n",
-      "123\n",
-      "122\n",
-      "121\n",
-      "120\n",
-      "119\n",
-      "118\n",
-      "117\n",
-      "116\n",
-      "115\n",
-      "114\n",
-      "113\n",
-      "112\n",
-      "111\n",
-      "110\n",
-      "109\n",
-      "108\n",
-      "107\n",
-      "106\n",
-      "105\n",
-      "104\n",
-      "103\n",
-      "102\n",
-      "101\n",
-      "100\n",
-      "99\n",
-      "98\n",
-      "97\n",
-      "96\n",
-      "95\n",
-      "94\n",
-      "93\n",
-      "92\n",
-      "91\n",
-      "90\n",
-      "89\n",
-      "88\n",
-      "87\n",
-      "86\n",
-      "85\n",
-      "84\n",
-      "83\n",
-      "82\n",
-      "81\n",
-      "80\n",
-      "79\n",
-      "78\n",
-      "77\n",
-      "76\n",
-      "75\n",
-      "74\n",
-      "73\n",
-      "72\n",
-      "71\n",
-      "70\n",
-      "Accuracy of 98.2 and 83 components and C: 2 noise intensity: 0.1\n"
-     ]
-    }
-   ],
-   "source": [
-    "c_opt = 1\n",
-    "acc_opt = 0\n",
-    "comp_opt = 0\n",
-    "noise_opt = 0.0\n",
-    "for n_comp in reversed(range(70,150)):\n",
-    "    dataset.pca(n_comp=n_comp)\n",
-    "        \n",
-    "    X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)\n",
-    "    for C in [0.5,1,2,3,4]:\n",
-    "        for noise_int in [0.1,0.2,0.3,0.4,0.5]:\n",
+    "dataset.pca(n_comp=80)\n",
+    "acc_matrix = np.zeros([7,7])\n",
+    "num = 5\n",
+    "for N in range(num):\n",
+    "    i = 0\n",
+    "    for C in [1.0, 1.5, 2.0, 2.5, 3.0, 3.5,4.0]:\n",
+    "    \n",
+    "        j = 0\n",
+    "        for noise_int in [0.0,0.1,0.2,0.3,0.4,0.5,0.6]:\n",
+    "            X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)\n",
     "            clf = svm.SVC(C=C)\n",
     "            scores = cross_val_with_noise(X,y,10,noise_int,clf)\n",
-    "            if np.mean(scores) >= acc_opt:\n",
-    "                acc_opt = np.mean(scores)\n",
-    "                comp_opt = n_comp\n",
-    "                noise_opt = noise_int\n",
-    "                c_opt = C\n",
+    "            acc_matrix[i,j] += np.mean(scores)/num\n",
+    "            j+=1\n",
+    "        i+=1\n",
     "    \n",
-    "print (\"Accuracy of\", acc_opt, \"and\", comp_opt, \"components and C:\", c_opt, \"noise intensity:\", noise_opt)\n",
-    "\n"
+    "print(acc_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 97.89999999999999 %\n"
+      "Accuracy of 0.0 and 70 components and C: 1.45 noise intensity: 0.5\n"
      ]
     }
    ],
-   "source": [
-    "dataset.pca(n_comp=comp_opt)\n",
-    "#X, y = dataset.getWholeTrainSet(pca=True, shuffle=True)\n",
-    "X, y = dataset.getNoisySet(intensity = noise_opt, flat = False, pca=True, shuffle=True, set=\"train\")\n",
-    "clf = svm.SVC(C=c_opt)\n",
-    "clf.fit(X,y)\n",
-    "X_test, y_test = dataset.getWholeTestSet(pca=True,shuffle=True,flat=False)\n",
-    "y_predict = clf.predict(X_test)\n",
-    "mismatch = 0\n",
-    "for i in range(len(y_test)):\n",
-    "    if y_test[i] != y_predict[i]:\n",
-    "        mismatch+=1\n",
-    "print (\"Test accuracy:\",  (1-mismatch/len(y_test))*100, \"%\")"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
