--- a/CNN_Digit-Regularization-Noisytestdata.ipynb
+++ b/CNN_Digit-Regularization-Noisytestdata.ipynb
@@ -96,28 +96,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Data normalization\n",
-    "def normalise_data(trainXwithnoise,traindata, testdata):\n",
-    "    \n",
-    "    #trainXwithnoise = trainXwithnoise.astype('float32')\n",
-    "    traindata = traindata.astype('float32')\n",
-    "    testdata = testdata.astype('float32')\n",
-    "    \n",
-    "    # clear this line and dont use normalise\n",
-    "    #trainXwithnoise2 = trainXwithnoise/np.linalg.norm(trainXwithnoise)\n",
-    "    train_norm2 = traindata / np.linalg.norm(traindata)\n",
-    "    \n",
-    "    # check if test data is on a range of 0-255\n",
-    "    test_norm2 = testdata /np.linalg.norm(testdata)\n",
-    "    return trainXwithnoise2,train_norm2, test_norm2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -269,7 +247,7 @@
     "            model = fitmodel(trainX, trainY,testX, testY,i,intensities[j])\n",
     "            modellist.append(model)\n",
     "        \n",
-    "        correct = 0    \n",
+    "        #correct = 0    \n",
     "        correctpermodel = modelpredictions(modellist,testX,testYintegers)\n",
     "        \n",
     "        \n",
