--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Average cross-validation for several values of C (lambda) and noise intensities\n",
+    "#Average cross-validation for several values of C and noise intensities\n",
     "dataset.pca(n_comp=50)\n",
     "acc_matrix = np.zeros([8,6])\n",
     "num = 100\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
      "output_type": "stream",
      "text": [
       "(1000, 16, 15) (1000,)\n",
-      "[95.5  98.21 98.34 98.4  98.34 98.4 98.34  98.3 ]\n"
+      "[96.28 98.42 98.5  98.45 98.44 98.51 98.44]\n"
      ]
     }
    ],
@@ -262,12 +262,11 @@
     "#Cross-val accuracies for augmented training data\n",
     "\n",
     "X, y = dataset.getWholeTrainSet(shuffle=True)\n",
-    "print(np.shape(X), np.shape(y))\n",
     "c_opt = 1.0\n",
     "noise_opt = 0.0\n",
     "i = 0\n",
-    "Cs = [0.1, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0] #different regularization parameters\n",
-    "accuracies = np.zeros(8)\n",
+    "Cs = [0.1, 1.0, 2.0, 3.0, 4.0, 5.0, 10] #different regularization parameters\n",
+    "accuracies = np.zeros(len(Cs))\n",
     "num = 10\n",
     "for c in Cs:\n",
     "    for N in range(num):\n",
@@ -287,12 +286,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 98.1599999999998 %\n"
+      "Test accuracy: 98.1591999999998 %\n"
      ]
     }
    ],
    "source": [
-    "#Testing accuracy with augmented training data with optimal C (lambda)\n",
+    "#Testing accuracy with augmented training data with optimal C\n",
     "\n",
     "accuracy = 0\n",
     "for n in range(500):\n",
